--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
     top: 20px;
     width: 20%;
     padding: 10px;
-    box-shadow: 0 0 5px #000000bc;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);;
     transform: translateX(100%);
     transition: .3s ease;
 }
